# ezratesol

./: .gitignore  DEPLOY_VERCEL.md  README.md  SUPABASE.md  package-lock.json  package.json
programs/ezrate/: Cargo.toml  Quasar.toml
programs/ezrate/src/: lib.rs
programs/ezrate/src/events/: mod.rs
programs/ezrate/src/instructions/: create_event.rs  mod.rs  submit_review.rs
programs/ezrate/src/state/: mod.rs
supabase/: schema.sql
web/: .env.example  next.config.js  package.json
web/app/: globals.css  layout.tsx  page.tsx  types.d.ts
web/app/api/events/: route.ts
web/app/api/reviews/: route.ts
web/app/app/: page.tsx
web/app/event/[slug]/: page.tsx
web/components/: AppHome.tsx  LandingPage.tsx  ReviewForm.tsx
web/context/: index.tsx
web/data/: seed.json
web/lib/: store.ts  types.ts
