[package]
name = "ezrate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
alloc = []
client = []

[dependencies]
quasar-lang = { git = "https://github.com/blueshift-gg/quasar" }

[dev-dependencies]
ezrate-client = { path = "target/client/rust/ezrate-client" }
quasar-svm = { git = "https://github.com/blueshift-gg/quasar-svm" }
solana-address = { version = "2.2.0", features = ["decode"] }
solana-keypair = "3.1.2"
solana-pubkey = "4.1.0"
